Add test for Bot Connector SDK

--- a/codegen_mappings.json
+++ b/codegen_mappings.json
@@ -72,6 +72,13 @@
       "ft": 1
     }
   },
+  "botframework-connector": {
+    "resource-manager": {
+      "packageName": "botframework-connector",
+      "dir": "botFramework/Connector/lib",
+      "source": "botframework/data-plane/connector/readme.md"
+    }
+  },
   "cdn": {
     "resource-manager": {
       "packageName": "azure-arm-cdn",
